@startuml Pantry Manager Classes

header PantrySync.pro
right footer Let that sync in...
title Database Structure

    entity User {
        *id : int
        --
        *email : string
        *name : string
        *password : string
    }

    entity Group {
        *id : int
        --
        *name : string
    }

    entity GroupMember {
        *id : int
        --
        *group_id : int <<FK>>
        *user : string <<FK>>
        *role : string
    }

    entity Recipes {
        *id : int
        --
        *user_id : int <<FK>>
        *name : string
        /' Including ingredients here for the purpose of identifying possible recipes for given ingredients would
           require a more advanced structure.
        '/
        *instructions : text
    }

    entity Item {
        *id : int
        --
        *group_id : <<FK>>
        *name : string
        *description: string
        *category : string
        *pantry_quantity : int
        *minimum_threshold : int
        *auto_add_to_shopping_list : bool
        *shopping_list_quantity : int
        *dont_add_to_pantry_on_purchase : bool
     }

    entity ActionLog {
        *id : int
        --
        *timestamp : datetime
        *group_id : int <<FK>>
        *message : string
    }

    entity Session {
        *id : int
        --
        *token : string
        *user_id : int <<FK>>
        *create_date : datetime
        *last_use_date : datetime
    }

    User  ||--o{ GroupMember
    User  ||--o{ Recipes
    User  ||--o{ Session
    Group ||--o{ ActionLog
    Group ||--o{ GroupMember
    Group ||--o{ Item

@enduml
